--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "flow-bin": "^0.109.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "prettier": "1.18.2",
+    "prettier": "1.18.2"
   },
   "dependencies": {},
   "engines": {
